--- a/business_detail.html
+++ b/business_detail.html
@@ -56,7 +56,7 @@
                     <li><a href="inspiration_detail.html">Inspiration</a></li>
                 </ul>
         </header>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/WSvREuhkoOs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/WSvREuhkoOs" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <footer>
             <p>PADC 7 =>Web Full Term Course <span style="float: right;margin-right: 20px;">Contact Info: <a href="">PADC@gmail.com</a></span></p>
         </footer>
