--- a/inspiration_detail.html
+++ b/inspiration_detail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="">
     <head>
-        <title>Business</title>
+        <title>Inspiration</title>
         <style>
             ul {
               list-style-type: none;
@@ -56,7 +56,7 @@
                     <li><a href="inspiration_detail.html"  class="active">Inspiration</a></li>
                 </ul>
         </header>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/wnHW6o8WMas" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/wnHW6o8WMas" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <footer>
             <p>PADC 7 =>Web Full Term Course <span style="float: right;margin-right: 20px;">Contact Info: <a href="">PADC@gmail.com</a></span></p>
         </footer>
